<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    tools:context=".RegisterActiviy">
    <TextView
        android:id="@id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_gravity="left"
        android:textSize="25dp"
        android:padding="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MobileNumber"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/confirmpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ConfirmPassword"
        android:padding="18dp"
        />


    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:layout_gravity="right"
        android:padding="18dp"
        android:textSize="18dp"
        />





</LinearLayout>