<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    tools:context=".UpdatePasswordActivity">
    <TextView
        android:id="@+id/resetpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResetPasssword"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/Password"/>
    <EditText
        android:id="@+id/confirmpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:hint="@string/ConfirmPassword"/>
    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/Update"
        />

</LinearLayout>